[tool.poetry]
name = "confluent-security-python-tools"
version = "0.1.0"
description = "Useful security tools written in python"
authors = ["Eike Thaden <ethaden@confluent.io>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
request2 = "^0.2"
pyjwt = {extras = ["crypto"], version = "^2.9.0"}
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
